# maestro-studio

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh  structure.txt
.github/workflows/: ci.yml
include/maestro/audio/: audio_engine.hpp
include/maestro/audio/dsp/: dsp_common.hpp
include/maestro/audio/effects/: delay.hpp  dynamics.hpp  eq.hpp  modulation.hpp  reverb.hpp
include/maestro/core/: config.hpp  engine.hpp  settings.hpp  types.hpp
include/maestro/instruments/: instrument.hpp
include/maestro/instruments/yamaha/: yamaha_instrument.hpp
include/maestro/midi/: midi_engine.hpp  midi_types.hpp
include/maestro/ml/: ml_engine.hpp
include/maestro/pad/: pad_engine.hpp
include/maestro/scripting/: script_engine.hpp
include/maestro/studio/: automation.hpp  project.hpp  recording.hpp
include/maestro/style/: style_engine.hpp
include/maestro/sync/: sync_engine.hpp
include/maestro/voice/: voice_engine.hpp
resources/styles/: dark.qss
src/audio/: audio_engine.cpp
src/audio/dsp/: dsp_common.cpp
src/audio/effects/: delay.cpp  dynamics.cpp  eq.cpp  modulation.cpp  reverb.cpp
src/core/: engine.cpp  settings.cpp
src/gui/qt/: main.cpp  mainwindow.cpp  mainwindow.hpp
src/gui/qt/widgets/: midi_monitor.cpp  midi_monitor.hpp  mixer.cpp  mixer.hpp  onboarding_wizard.cpp  onboarding_wizard.hpp  pad_grid.cpp  pad_grid.hpp  piano_roll.cpp  piano_roll.hpp  registration.cpp  registration.hpp  settings_dialog.cpp  settings_dialog.hpp  splash_screen.cpp  splash_screen.hpp  style_control.cpp  style_control.hpp  terminal_widget.cpp  terminal_widget.hpp  transport.cpp  transport.hpp  voice_select.cpp  voice_select.hpp
src/instruments/: instrument_factory.cpp
src/instruments/korg/: korg_pa.cpp
src/instruments/roland/: roland_fantom.cpp
src/instruments/yamaha/: sff_parser.cpp  yamaha_genos.cpp  yamaha_motif.cpp
src/midi/: midi_engine.cpp  midi_file.cpp  midi_message.cpp  midi_sequencer.cpp
src/ml/: ml_engine.cpp
src/pad/: pad_engine.cpp
src/scripting/: script_engine.cpp
src/studio/: automation.cpp  plugin_host.cpp  project.cpp  recording.cpp
src/style/: style_engine.cpp  style_parser.cpp
src/sync/: sync_engine.cpp
src/voice/: voice_engine.cpp
tests/: CMakeLists.txt
tests/integration/: test_engine_integration.cpp
tests/unit/: test_audio_dsp.cpp  test_effects.cpp  test_midi_messages.cpp  test_style_engine.cpp
